Update KnotLauncher.java